--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "typescript.bootstrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "jest",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon build/index.js"
+  },
+  "dependencies": {
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
+    "@types/socket.io": "^3.0.2",
     "jest": "^29.0.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "nodemon": "^2.0.20",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "engines": {
     "node": ">=16.14.0",
