--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack-cli": "^4.10.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "ts-jest": "^29.0.3"
   },
   "engines": {
     "node": ">=16.14.0",
