--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "watch": "webpack --watch",
     "start": "nodemon build/index.js"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
@@ -18,14 +16,15 @@
     "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
     "@types/socket.io": "^3.0.2",
+    "dotenv-webpack": "^8.0.1",
     "jest": "^29.0.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack-cli": "^4.10.0",
-    "webpack-node-externals": "^3.0.0",
-    "ts-jest": "^29.0.3"
+    "webpack-node-externals": "^3.0.0"
   },
   "engines": {
     "node": ">=16.14.0",
@@ -33,5 +32,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
